# avenlis-sandstrike

./: .gitignore  CLI_TESTING_GUIDE.md  INSTALL_INSTRUCTIONS.md  LICENSE  README.md  README_PYPI.md  REPOSITORY_STRUCTURE.md  avenlis_config.yaml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
documentation/: CLI_CHEATSHEET.md  INSTALL_INSTRUCTIONS.md  README_PYPI.md  USER_GUIDE.md
sandstrike/: README.md  __init__.py  __main__.py  api.py  auth.py  config.py  exceptions.py  llm_providers.py  main_storage.py  sandstrike_auth.py  server.py
sandstrike/cli/: README.md  __init__.py  main.py
sandstrike/cli/commands/: README.md  __init__.py  auth.py  collections.py  database.py  grader.py  prompts.py  reports.py  sessions.py  targets.py  ui.py  variables.py
sandstrike/data/: dynamic_variables.yaml  gradingIntents.yaml  sessions.json  targets.yaml
sandstrike/data/prompts/: sample_prompts_additional.yaml  sample_prompts_primary.yaml
sandstrike/encoding/: __init__.py  encoders.py
sandstrike/grading/: README.md  __init__.py  assertions.py  config.py  grading_engine.py  providers.py
sandstrike/redteam/: README.md  __init__.py  core.py  encoders.py  session.py
sandstrike/reports/: html_generator.py.backup
sandstrike/schemas/: __init__.py  yaml_schemas.py
sandstrike/storage/: README.md  __init__.py  database.py  hybrid_storage.py  yaml_loader.py
sandstrike/templates/: adversarial_prompts_template.yaml  attack_types_and_vulnerabilities_template.yaml  collection_template.yaml  scan_results_template.json  session_config_template.yaml  sessions_template.json
sandstrike/utils/: README.md  __init__.py  logging.py  validation.py
sandstrike/web-ui/: Dockerfile  Dockerfile.backend  README.md  docker-compose.yml  index.html  package.json  run-without-npm.bat  run-without-npm.sh  start-dev.bat  start-dev.sh  tsconfig.json  vite.config.ts
sandstrike/web-ui/src/: App.tsx  index.css  main.tsx
sandstrike/web-ui/src/components/common/: CustomDropdown.tsx  CustomTooltip.tsx  EncodingSelector.tsx  SlideOverlay.tsx
sandstrike/web-ui/src/components/layout/: Sidebar.tsx
sandstrike/web-ui/src/contexts/: SocketContext.tsx  SubscriptionContext.tsx  TimezoneContext.tsx
sandstrike/web-ui/src/pages/: Collections.tsx  Dashboard.tsx  MitreAtlas.tsx  OwaspLlm.tsx  Prompts.tsx  Reports.tsx  Scan.tsx  Sessions.tsx  Targets.tsx
sandstrike/web-ui/src/utils/: dateFormat.ts
tests/: README.md  __init__.py  test.py  test_auth.py  test_avenlis_main.py
tests/collections/: test_collections.py
tests/prompts/: import_test.json  test_prompts.py
tests/reports/: test_reports.py
tests/sessions/: test_sessions.py
tests/targets/: test_targets.py
tests/variables/: test_variables.py
